-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9
-
156aec720 (dev), 60a51628f (6.8), 12a3bedaf (dev), 4f52a7c03 (6.8)
-
DaVinci 107, DaVinci 108
QDoc embeds a build time path to the qdoc binary which cause QA errors on Yocto builds
ERROR: nativesdk-qttools-6.9.0-r0 do_package_qa: QA Issue: File /usr/local/oe-sdk-hardcoded-buildpath/sysroots/x86_64-pokysdk-linux/usr/bin/qdoc in package nativesdk-qttools-tools contains reference to TMPDIR [buildpaths]
ERROR: nativesdk-qttools-6.9.0-r0 do_package_qa: Fatal QA errors were found, failing task.
in src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:
("-I" CLANG_RESOURCE_DIR)
- relates to
-
QTBUG-105926 Qt should support reproducible builds
-
- Open
-